--- a/catalog.html
+++ b/catalog.html
@@ -46,8 +46,8 @@
             <legend>Сетка:</legend>
             <ul>
               <li>
-              <input type="radio" name="net" value="adaptive" id="filter-adaptive">
-              <label for="filter-adaptive">Адаптивная</label>
+                <input type="radio" name="net" value="adaptive" id="filter-adaptive">
+                <label for="filter-adaptive">Адаптивная</label>
               </li>
 
               <li>
@@ -95,90 +95,112 @@
       </section>
       <section>
         <h2>Сортировать:</h2>
-          <ul>
-            <li>
-              <a href="#">По цене</a>
-            </li>
+        <ul>
+          <li>
+            <a href="#">По цене</a>
+          </li>
 
-            <li>
-              <a href="#">По типу</a>
-            </li>
+          <li>
+            <a href="#">По типу</a>
+          </li>
 
-            <li>
-              <a href="#">По названию</a>
-            </li>
+          <li>
+            <a href="#">По названию</a>
+          </li>
 
-            <li>
-              <a href="#">Сортировка от большего к меньшему</a>
-            </li>
+          <li>
+            <a href="#">Сортировка от большего к меньшему</a>
+          </li>
 
-            <li>
-              <a href="#">Сортировка от меньшего к большему</a>
-            </li>
-          </ul>
-          <ul>
-            <li><a href="#">Sedona</a>
-              <p>
-                Информационный сайт<br>
-                для туристов
-              </p>
+          <li>
+            <a href="#">Сортировка от меньшего к большему</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Товары:</h2>  
+        <ul>
+          <li>
+            <h3><a href="#">Sedona</a></h3>
+            <p>
+              Информационный сайт<br>
+              для туристов
+            </p>
+            <p>
+              <a href="#">9 900 ₽</a>
+            </p>
+            <p>
               <img src="https://via.placeholder.com/150x100" alt="">
-              <p>
-                <a href="#">9 900 ₽</a>
-              </p>
-            </li>
+            </p>
+          </li>
 
-            <li>
-              <a href="#">Pink</a>
-              <p>
-                <img src="https://via.placeholder.com/150x100" alt="">
-              </p>
-            </li>
+          <li>
+            <h3><a href="#">Pink app</a></h3>
+            <p>
+              Продуктовый лендинг<br>
+              приложения для iOS и Android
+            </p>
+            <p>
+              <a href="#">9 900 ₽</a>
+            </p>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </p>
+          </li>
 
-            <li>
-              <a href="#">Барбершоп"Бородинский"</a>
-              <p>
-                <img src="https://via.placeholder.com/150x100" alt="">
-              </p>
-            </li>
+          <li>
+            <a href="#">Барбершоп"Бородинский"</a>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </p>
+          </li>
 
-            <li>
-              <a href="#">Mishka</a>
-              <p>
-                <img src="https://via.placeholder.com/150x100" alt="">
-              </p>
-            </li>
+          <li>
+            <a href="#">Mishka</a>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </p>
+          </li>
 
-            <li>
-              <a href="#">Aplus</a>
-              <p>
-                <img src="https://via.placeholder.com/150x100" alt="">
-              </p>
-            </li>
-            <li>
-              <a href="#">Kvast</a>
-              <p>
-                <img src="https://via.placeholder.com/150x100" alt="">
-              </p>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a>1</a>
-            </li>
+          <li>
+            <a href="#">Aplus</a>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </p>
+          </li>
+          <li>
+            <h3><a href="#">Кваст</a></h3>
+            <p>
+              Промо-сайт производителя<br>
+              крафтового кваса
+            </p>
+            <p>
+              <a href="#">9 900 ₽</a>
+            </p>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="">
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <a>1</a>
+          </li>
 
-            <li>
-              <a href="#">2</a>
-            </li>
+          <li>
+            <a href="#">2</a>
+          </li>
 
-            <li>
-              <a href="#">3</a>
-            </li>
+          <li>
+            <a href="#">3</a>
+          </li>
 
-            <li>
-              <a href="#">Следующая</a>
-            </li>
-          </ul>
+          <li>
+            <a href="#">Следующая</a>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
@@ -190,8 +212,7 @@
           nёrds design studio
         </p>
         <p> 
-          наб. Реки Карповки,<br>
-          5 лит П, Санкт-Петербург
+          наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
         </p>
         <p> 
           <a href="tel:+78005558628">+7 800 555-86-28</a>
