--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
       </nav>
       <h1>Долго, Дорого, Скурпулезно.</h1>
       <p>
-        Математически выверенный дизайн <br>
-        для вашего сайта или мобильного приложения.
+        Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
       </p>
-        <a href="#">Узнать больше</a>
+      <a href="#">Узнать больше</a>
     </header>
     <main> 
       <h2>Услуги</h2>
@@ -42,10 +41,9 @@
         </p>
         <h2>Веб-сайты</h2>
         <p>
-          Мир никогда не будет прежним<br>
-          после того как увидит ваш сайт!
+          Мир никогда не будет прежним<br>после того как увидит ваш сайт!
         </p>
-          <a href="#">Заказать</a>
+        <a href="#">Заказать</a>
       </section>
       <section>
         <p>
@@ -53,43 +51,39 @@
         </p>
         <h2>Приложения</h2>
         <p>
-          Покорите топ-10 приложений<br>
-          в AppStore и Google Play
+          Покорите топ-10 приложений<br>в AppStore и Google Play
         </p>
-          <a href="#">Заказать</a>
+        <a href="#">Заказать</a>
       </section>
       <section>
         <p>
           <img src="https://via.placeholder.com/150x100" alt="">
-          </p>
-          <h2>Презентации</h2>
-          <p>
-            Вы даже не подозреваете,<br>
-            насколько вы изумительны!
-          </p>
-          <a href="#">Заказать</a>
+        </p>
+        <h2>Презентации</h2>
+        <p>
+          Вы даже не подозреваете,<br>насколько вы изумительны!
+        </p>
+        <a href="#">Заказать</a>
       </section>
       <section>
-        <h2>Мы — маленькая, но гордая <br>
-          дизайн-студия из Краснодара.</h2>
-          <p>
-            Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
-            превыше креатива. Работаем не покладая рук, как роботы.
-          </p>
-            <h3>Выполняем заказы на разработку:</h3>
-            <ul>
-              <li>
-                Веб-сайтов любой сложности
-              </li>
+        <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+        <p>
+          Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.
+        </p>
+        <h3>Выполняем заказы на разработку:</h3>
+        <ul>
+          <li>
+            Веб-сайтов любой сложности
+          </li>
 
-              <li>
-                Мобильных приложений для IOS и Android
-              </li>
+          <li>
+            Мобильных приложений для IOS и Android
+          </li>
 
-              <li>
-                Слайдшоу и видео для корпоративных презентаций
-              </li>
-            </ul>  
+          <li>
+            Слайдшоу и видео для корпоративных презентаций
+          </li>
+        </ul>  
       </section>
       <section>
         <figure>
@@ -100,24 +94,21 @@
           <li>
             146<sup>%</sup>
             <p>
-              Уровень<br>
-              самоотдачи
+              Уровень<br>самоотдачи
             </p>
           </li>
 
           <li>
             100<sup>%</sup>
             <p>
-              Соблюдение<br>
-              сроков
+              Соблюдение<br>сроков
             </p>
           </li>
 
           <li>
             50<sup>%</sup>
             <p>
-              Минимальная<br>
-              предоплата
+              Минимальная<br>предоплата
             </p>
           </li>
         </ul>
@@ -160,8 +151,7 @@
           nёrds design studio
         </p>
         <p>
-          наб. Реки Карповки,<br>
-          5 лит П, Санкт-Петербург
+          наб. Реки Карповки,<br>5 лит П, Санкт-Петербург
         </p>
         <p>
           <a href="tel:+78005558628">+7 800 555-86-28</a>
