--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p>
         Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
       </p>
-      <a class="button button-general" href="#">Узнать больше</a>
+      <a class="button" href="#">Узнать больше</a>
     </header>
     <main class="container"> 
       <h2>Услуги</h2>
@@ -49,7 +49,7 @@
         <p>
           Мир никогда не будет прежним<br>после того как увидит ваш сайт!
         </p>
-        <a class="button-red button-general" href="#">Заказать</a>
+        <a class="button" href="#">Заказать</a>
       </section>
       <section class="service-two">
         <p>
@@ -59,7 +59,7 @@
         <p>
           Покорите топ-10 приложений<br>в AppStore и Google Play
         </p>
-        <a class="button-green" href="#">Заказать</a>
+        <a class="button button-green" href="#">Заказать</a>
       </section>
       <section class="service-three">
         <p>
@@ -69,7 +69,7 @@
         <p>
           Вы даже не подозреваете,<br>насколько вы изумительны!
         </p>
-        <a class="button-yellow" href="#">Заказать</a>
+        <a class="button button-yellow" href="#">Заказать</a>
       </section>
       <section class="info">
         <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
@@ -162,7 +162,7 @@
         <p>
           <a class="contacts-phone" href="tel:+78005558628">+7 800 555-86-28</a>
         </p>
-        <a class="button button-general" href="#">Напишите нам</a>
+        <a class="button" href="#">Напишите нам</a>
       </section>
       <section class="footer-social">
         <ul class="clear-list">
@@ -201,7 +201,7 @@
           <label for="modal-text">Текст письма:</label>
           <input id="modal-text" type="text" name="text" placeholder="В свободной форме">
         </p>
-        <button class="button button-general" type="submit">Отправить</button> 
+        <button class="button" type="submit">Отправить</button> 
       </form>
       <button class="modal-close" type="button">Закрыть</button>  
     </section>
