--- a/index.html
+++ b/index.html
@@ -11,141 +11,157 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body class="page-body">
-    <header class="main-header"> 
-      <nav class="main-navigation">
-        <img src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
-        <ul class="site-navigation clear-list">
-          <li>
-            <a href="#">Студия</a>
-          </li>
+    <header class="main-header">
+      <div class="wrapper"> 
+        <nav class="main-navigation">
+          <img class="main-header-logo" src="img/logos/nerds-logo.svg" width="160" height="65" alt="логотип студии нёрдс">
+          <ul class="site-navigation clear-list">
+            <li>
+              <a href="#">Студия</a>
+            </li>
 
-          <li>
-            <a href="#">Клиенты</a>
-          </li>
+            <li>
+              <a href="#">Клиенты</a>
+            </li>
 
-          <li>
-            <a href="catalog.html">Магазин</a>
-          </li>
+            <li>
+              <a href="catalog.html">Магазин</a>
+            </li>
 
-          <li>
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
-        <a class="basket-link clear-list" href="#">Корзина</a>        
-      </nav>
-      <h1>Долго, дорого,<br>скрупулезно.</h1>
-      <p>
-        Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
-      </p>
-      <a class="button" href="#">Узнать больше</a>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
+          </ul>       
+          <div class="user-navigation">
+            <a class="basket-link clear-list" href="#">Корзина</a>
+          </div>        
+        </nav>
+        <div class="main-chapter">
+          <h1>Долго, дорого,<br>скрупулезно.</h1>
+          <p>
+            Математически выверенный дизайн<br>для вашего сайта или мобильного приложения.
+          </p>
+          <a class="button" href="#">Узнать больше</a>
+        </div>
+      </div>
     </header>
     <main class="container"> 
       <h2>Услуги</h2>
-      <section class="service-one">
-        <p>
-          <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
-        </p>
-        <h2 class="general">Веб-сайты</h2>
-        <p>
-          Мир никогда не будет прежним<br>после того как увидит ваш сайт!
-        </p>
-        <a class="button" href="#">Заказать</a>
-      </section>
-      <section class="service-two">
-        <p>
-          <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
-        </p>
-        <h2 class="general">Приложения</h2>
-        <p>
-          Покорите топ-10 приложений<br>в AppStore и Google Play
-        </p>
-        <a class="button button-green" href="#">Заказать</a>
-      </section>
-      <section class="service-three">
-        <p>
-          <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
-        </p>
-        <h2 class="general">Презентации</h2>
-        <p>
-          Вы даже не подозреваете,<br>насколько вы изумительны!
-        </p>
-        <a class="button button-yellow" href="#">Заказать</a>
-      </section>
-      <section class="info">
-        <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
-        <p>
-          Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.
-        </p>
-        <h3>Выполняем заказы на разработку:</h3>
-        <ul class="info-list">
-          <li class="info-item">
-            Веб-сайтов любой сложности
-          </li>
-
-          <li>
-            Мобильных приложений для IOS и Android
-          </li>
-
-          <li>
-            Слайдшоу и видео для корпоративных презентаций
-          </li>
-        </ul>  
-      </section>
-      <section class="features">
-        <figure>
-          <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
-          <figcaption>с 2004 года Любим точность во всем:</figcaption>
-        </figure>
-        <ul class="features-list clear-list">
-          <li class="features-item">
-            146<sup class="symbol">%</sup>
-            <p class="description">
-              Уровень<br>самоотдачи
+      <div class="wrapper">
+        <div class="services">
+          <section class="service-one">
+            <p>
+              <img src="img/illustration1.jpg" width="300" height="146" alt="открытый веб-сайт на компьютере">
             </p>
-          </li>
-
-          <li class="features-item">
-            100<sup class="symbol">%</sup>
-            <p class="description">
-              Соблюдение<br>сроков
+            <h2 class="general">Веб-сайты</h2>
+            <p>
+              Мир никогда не будет прежним<br>после того как увидит ваш сайт!
             </p>
-          </li>
-
-          <li class="features-item">
-            50<sup class="symbol">%</sup>
-            <p class="description">
-              Минимальная<br>предоплата
+            <a class="button" href="#">Заказать</a>
+          </section>
+          <section class="service-two">
+            <p>
+              <img src="img/illustration2.jpg" width="300" height="146" alt="два смартфона, на которых установлены приложения">
             </p>
-          </li>
-        </ul>
-      </section>
+            <h2 class="general">Приложения</h2>
+            <p>
+              Покорите топ-10 приложений<br>в AppStore и Google Play
+            </p>
+            <a class="button button-green" href="#">Заказать</a>
+          </section>
+          <section class="service-three">
+            <p>
+              <img src="img/illustration3.jpg" width="300" height="146" alt="стенд с диаграммами">
+            </p>
+            <h2 class="general">Презентации</h2>
+            <p>
+              Вы даже не подозреваете,<br>насколько вы изумительны!
+            </p>
+            <a class="button button-yellow" href="#">Заказать</a>
+          </section>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="block-info">
+          <section class="info">
+            <h2>Мы — маленькая, но гордая<br>дизайн-студия из Краснодара.</h2>
+            <p>
+              Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>превыше креатива. Работаем не покладая рук, как роботы.
+            </p>
+            <h3>Выполняем заказы на разработку:</h3>
+            <ul class="info-list clear-list">
+              <li class="info-item">
+                Веб-сайтов любой сложности
+              </li>
+
+              <li>
+                Мобильных приложений для IOS и Android
+              </li>
+
+              <li>
+                Слайдшоу и видео для корпоративных презентаций
+              </li>
+            </ul>  
+          </section>
+          <section class="features">
+            <figure>
+              <img src="img/nerds-illustration.png" width="360" height="208" alt="надпись nerds на фоне разноцветных шаров">
+              <figcaption>с 2004 года Любим точность во всем:</figcaption>
+            </figure>
+            <ul class="features-list clear-list">
+              <li class="features-item">
+                146<sup class="symbol">%</sup>
+                <p class="description">
+                  Уровень<br>самоотдачи
+                </p>
+              </li>
+
+              <li class="features-item">
+                100<sup class="symbol">%</sup>
+                <p class="description">
+                  Соблюдение<br>сроков
+                </p>
+              </li>
+
+              <li class="features-item">
+                50<sup class="symbol">%</sup>
+                <p class="description">
+                  Минимальная<br>предоплата
+                </p>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </div>   
       <section class="clients">
         <h2>Клиенты</h2>
-        <ul class="clients-list clear-list">
-          <li class="clients-items"> 
-            <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
-            </a>
-          </li>
+        <div class="wrapper">
+          <ul class="clients-list clear-list">
+            <li class="clients-items"> 
+              <a href="https://htmlacademy.ru/intensive/htmlcss">
+                <img src="img/logos/logo_htmlacademy.svg" width="199" height="57" alt="логотип htmlacademy">
+              </a>
+            </li>
 
-          <li>
-            <a href="#">
-              <img src="img/logos/logo_borodinski.png" width="209" height="90" alt="логотип borodinski">
-            </a>  
-          </li>
+            <li>
+              <a href="#">
+                <img src="img/logos/logo_borodinski.png" width="209" height="90" alt="логотип borodinski">
+              </a>  
+            </li>
 
-          <li>
-            <a href="#">
-              <img src="img/logos/logo_pink.png" width="185" height="52" alt="логотип pink">
-            </a>
-          </li>
+            <li>
+              <a href="#">
+                <img src="img/logos/logo_pink.png" width="185" height="52" alt="логотип pink">
+              </a>
+            </li>
 
-          <li> 
-            <a href="#">
-              <img src="img/logos/logo_mishka.png" width="173" height="84" alt="логотип mishka">
-            </a>
-          </li> 
-        </ul>
+            <li> 
+              <a href="#">
+                <img src="img/logos/logo_mishka.png" width="173" height="84" alt="логотип mishka">
+              </a>
+            </li> 
+          </ul>
+        </div> 
       </section>
     </main>
     <footer class="main-footer">
@@ -164,27 +180,31 @@
         </p>
         <a class="button" href="#">Напишите нам</a>
       </section>
-      <section class="footer-social">
-        <ul class="clear-list">
-          <li>
-            <a class="social-button" href="#">Вконтакте</a>
-          </li>
+      <div class="wrapper">
+        <div class="block-social">
+          <section class="footer-social">
+            <ul class="list-social clear-list">
+              <li>
+                <a class="social-button" href="#">Вконтакте</a>
+              </li>
 
-          <li>
-            <a class="social-button" href="#">Фейсбук</a>
-          </li>
+              <li>
+                <a class="social-button" href="#">Фейсбук</a>
+              </li>
 
-          <li>
-            <a class="social-button" href="#">Инстаграм</a>
-          </li>
-        </ul>
-      </section>
-      <section class="profitable">
-        <h2>Давайте дружить, это выгодно!</h2>
-        <p>
-          Скидка 10% для друзей из социальных сетей.
-        </p>
-      </section>
+              <li>
+                <a class="social-button" href="#">Инстаграм</a>
+              </li>
+            </ul>
+          </section>
+          <section class="profitable">
+            <h2>Давайте дружить, это выгодно!</h2>
+            <p>
+              Скидка 10% для друзей из социальных сетей.
+            </p>
+          </section>
+        </div>
+      </div>
     </footer>
     <section class="modal">
       <h2>Напишите нам</h2>
